=====================================
Date	  : Version: Description
=====================================

2021-09-27: v1.8.0 : Add PayPal payment type.
                     Fix issues with wallet payment types.
                     Tested with 1.7.7.8.

2021-06-18: v1.7.9 : Change notify handler to match redirect.
                     Addresses double price issue.
                     Fix double order issue on some servers.
                     Code quality improvements.
                     Update for PrestaShop 1.7.7.x
                     Add payment type selection to checkout.

2020-11-23: v1.7.8 : Add 'Disable IPN' feature.
                     Fix undefined $order issue.
                     Improve payment reference readability.

2020-09-17: v1.7.7 : Fix sessions cleared in some browsers.
                     Resolve shipping ignored issue with some providers.

2019-12-07: v1.7.6 : Included PW3 query in confirmation.php (direct return).
                     Handle cases where order has already been updated by notify.

2019-07-03: v1.7.5 : Url encode notify.

2018-08-06: v1.0.1 : Code format.
                     Logo changes.

2017-12-04:        : Add return url.
                   : Code reformat.

2017-11-22: v1.0.0 : Initial Release.









